--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Notes"
         mc:Ignorable="d"
-        Title="Notes" Height="520" Width="820"
+        Title="Notes" Height="620" Width="1000"
         WindowStartupLocation="CenterScreen"
-        WindowStyle="SingleBorderWindow"
+        WindowStyle="None"
         >
 
 
@@ -23,23 +23,23 @@
             <ColumnDefinition Width="9*"/>
         </Grid.ColumnDefinitions>
 
-        <Label x:Name="AppLabel" FontWeight="Bold" FontFamily="Bahnschrift" Content="Notes" HorizontalAlignment="Left" Margin="35,14,0,0" VerticalAlignment="Top" Height="35" Width="84" FontSize="26" Foreground="#7AD7F0"/>
+        <Label x:Name="AppLabel" FontWeight="Bold" FontFamily="Bahnschrift" Content="Notes" HorizontalAlignment="Left" Margin="30,26,0,0" VerticalAlignment="Top" Height="35" Width="84" FontSize="26" Foreground="#7AD7F0"/>
 
-        <TextBox x:Name="FileNameBox" Visibility="Hidden" HorizontalAlignment="Left" Margin="35,84,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="251"/>
-        <Label x:Name="FileNameLabel" FontWeight="Bold" Visibility="Hidden" Content="Filename" HorizontalAlignment="Left" Margin="30,58,0,0" VerticalAlignment="Top" Foreground="White"/>
-        <TextBox x:Name="txtBox1" Visibility="Hidden" AcceptsReturn="true" AcceptsTab="true" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="484" Height="296" Margin="35,114,0,0"/>
+        <TextBox x:Name="FileNameBox" Visibility="Hidden" HorizontalAlignment="Left" Margin="35,114,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="251"/>
+        <Label x:Name="FileNameLabel" FontWeight="Bold" Visibility="Hidden" Content="Filename" HorizontalAlignment="Left" Margin="30,83,0,0" VerticalAlignment="Top" Foreground="White"/>
+        <TextBox x:Name="txtBox1" Visibility="Hidden" AcceptsReturn="true" AcceptsTab="true" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="484" Height="296" Margin="35,144,0,0"/>
 
-        <Button x:Name="saveBtn" Visibility="Hidden" Foreground="White" Content="Save file" HorizontalAlignment="Left" Margin="171,430,0,0" VerticalAlignment="Top" Width="88" Background="Transparent" BorderBrush="White" FontFamily="Bahnschrift" FontWeight="Bold" Click="saveBtn_Click" Height="38" />
-        <Button x:Name="CreateNoteBtn" FontFamily="Bahnschrift" Content="Create a note" Background="Transparent" BorderBrush="White"  HorizontalAlignment="Left" Margin="288,0,0,0" VerticalAlignment="Center" Click="CreateNoteBtn_Click" Height="76" Width="168" Foreground="White"/>
-        <Button x:Name="clearBtn" Content="Clear Text" Visibility="Hidden" HorizontalAlignment="Left" Margin="320,430,0,0" VerticalAlignment="Top" Width="88" Foreground="White" Background="Transparent" BorderBrush="White" FontFamily="Bahnschrift" FontWeight="Bold" Click="clearBtn_Click" RenderTransformOrigin="0.5,0.5" Height="38"/>
-        
-        
-        
-        <Button x:Name="DeleteFileBtn" Visibility="Hidden" Content="Delete file" FontWeight="Bold" FontFamily="Bahnschrift" HorizontalAlignment="Left" Margin= "628,210,0,0" VerticalAlignment="Top" Click="DeleteFileBtn_Click" Foreground="White" Background="Transparent" RenderTransformOrigin="0.5,0.5" BorderBrush="White" Width="107" Height="51"/>
-        <Button x:Name="UpdateBtn" Content="Update file" Visibility="Hidden" HorizontalAlignment="Left" FontFamily="Bahnschrift" FontWeight="Bold" Margin= "628,120,0,0" VerticalAlignment="Top" Click="UpdateBtn_Click" BorderBrush="White" Foreground="White" Background="Transparent" Width="108" Height="51"/>
+        <Button x:Name="saveBtn" Visibility="Hidden" Foreground="White" Content="Save file" HorizontalAlignment="Left" Margin="171,530,0,0" VerticalAlignment="Top" Width="88" Background="Transparent" BorderBrush="White" FontFamily="Bahnschrift" FontWeight="Bold" Click="saveBtn_Click" Height="38" />
+        <Button x:Name="CreateNoteBtn" FontFamily="Bahnschrift" Content="Create a note" Background="Transparent" BorderBrush="White"  HorizontalAlignment="Left" Margin="398,0,0,0" VerticalAlignment="Center" Click="CreateNoteBtn_Click" Height="76" Width="168" Foreground="White"/>
+        <Button x:Name="clearBtn" Content="Clear Text" Visibility="Hidden" HorizontalAlignment="Left" Margin="320,530,0,0" VerticalAlignment="Top" Width="88" Foreground="White" Background="Transparent" BorderBrush="White" FontFamily="Bahnschrift" FontWeight="Bold" Click="clearBtn_Click" RenderTransformOrigin="0.5,0.5" Height="38"/>
 
 
-        <Button x:Name="WheatBtn" Content="" HorizontalAlignment="Left" Margin="668,42,0,0" VerticalAlignment="Top" BorderBrush="Wheat" Background="Wheat" Width="29" Height="24" Click="WheatBtn_Click" ClickMode="Hover">
+
+        <Button x:Name="DeleteFileBtn" Visibility="Hidden" Content="Delete file" FontWeight="Bold" FontFamily="Bahnschrift" HorizontalAlignment="Left" Margin= "469,530,0,0" VerticalAlignment="Top" Click="DeleteFileBtn_Click" Foreground="White" Background="Transparent" RenderTransformOrigin="0.5,0.5" BorderBrush="White" Width="87" Height="38"/>
+        <Button x:Name="UpdateBtn" Content="Update file" Visibility="Hidden" HorizontalAlignment="Left" FontFamily="Bahnschrift" FontWeight="Bold" Margin= "618,530,0,0" VerticalAlignment="Top" Click="UpdateBtn_Click" BorderBrush="White" Foreground="White" Background="Transparent" Width="87" Height="38"/>
+
+
+        <Button x:Name="WheatBtn" Content="" HorizontalAlignment="Left" Margin="870,42,0,0" VerticalAlignment="Top" BorderBrush="Wheat" Background="Wheat" Width="29" Height="24" Click="WheatBtn_Click" ClickMode="Hover">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="60"/>
@@ -47,7 +47,7 @@
             </Button.Resources>
         </Button>
 
-        <Button x:Name="WhiteBtn" Content="" HorizontalAlignment="Left" Margin="627,42,0,0" VerticalAlignment="Top" Width="29" Background="White" BorderBrush="White" Height="24" Click="WhiteBtn_Click" ClickMode="Hover">
+        <Button x:Name="WhiteBtn" Content="" HorizontalAlignment="Left" Margin="829,42,0,0" VerticalAlignment="Top" Width="29" Background="White" BorderBrush="White" Height="24" Click="WhiteBtn_Click" ClickMode="Hover">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="60"/>
@@ -56,7 +56,7 @@
         </Button>
 
 
-        <Button x:Name="BlackBtn" Content="" HorizontalAlignment="Left" Margin="585,42,0,0" VerticalAlignment="Top" Width="29" Height="24" Background="#FF2F2F2F" Click="BlackBtn_Click" BorderBrush="#FF2F2F2F" ClickMode="Hover">
+        <Button x:Name="BlackBtn" Content="" HorizontalAlignment="Left" Margin="787,42,0,0" VerticalAlignment="Top" Width="29" Height="24" Background="#FF2F2F2F" Click="BlackBtn_Click" BorderBrush="#FF2F2F2F" ClickMode="Hover">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="60"/>
@@ -64,7 +64,7 @@
             </Button.Resources>
         </Button>
 
-        <Button x:Name="OrangeGradientBtn" Content="" HorizontalAlignment="Left" Margin="545,42,0,0" VerticalAlignment="Top" Width="29" Height="24" Click="OrangeGradientBtn_Click" Background="#FFFF7550" BorderBrush="{x:Null}" ClickMode="Hover">
+        <Button x:Name="OrangeGradientBtn" Content="" HorizontalAlignment="Left" Margin="747,42,0,0" VerticalAlignment="Top" Width="29" Height="24" Click="OrangeGradientBtn_Click" Background="#FFFF7550" BorderBrush="{x:Null}" ClickMode="Hover">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="60"/>
@@ -72,26 +72,26 @@
             </Button.Resources>
         </Button>
 
-        <Button x:Name="PurpleGradientBtn" Content="" HorizontalAlignment="Left" Margin="505,42,0,0" VerticalAlignment="Top" Width="29" Height="24" Click="PurpleGradientBtn_OnClick" Background="#2E2157" BorderBrush="{x:Null}" ClickMode="Hover">
+        <Button x:Name="PurpleGradientBtn" Content="" HorizontalAlignment="Left" Margin="707,42,0,0" VerticalAlignment="Top" Width="29" Height="24" Click="PurpleGradientBtn_OnClick" Background="#2E2157" BorderBrush="{x:Null}" ClickMode="Hover">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="60"/>
                 </Style>
             </Button.Resources>
         </Button>
-        
-        
-        <Button x:Name="closeBtn" Content="" HorizontalAlignment="Left" Margin="752,22,0,0" VerticalAlignment="Top" Width="25" Height="27" Click="closeBtn_Click" BorderBrush="{x:Null}">
+
+
+        <Button x:Name="closeBtn" Content="" HorizontalAlignment="Left" Margin="954,22,0,0" VerticalAlignment="Top" Width="25" Height="27" Click="closeBtn_Click" BorderBrush="{x:Null}">
             <Button.Background>
                 <ImageBrush ImageSource="https://static.thenounproject.com/png/530778-200.png"/>
             </Button.Background>
         </Button>
 
-        <Label x:Name="vLabel" Content="v.1.0.0" HorizontalAlignment="Left" Margin="715,455,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Bahnschrift"/>
-        <Button x:Name="MainBackBtn" Visibility="Hidden" Content="Back" HorizontalAlignment="Left" Margin="30,460,0,0" VerticalAlignment="Top" Height="22" Width="35" Background="{x:Null}" Foreground="White" BorderBrush="White" FontFamily="Bahnschrift" Click="MainBackBtn_Click"/>
-        <ListBox x:Name="NamesBox" Visibility="Hidden" ItemsSource="{Binding TxtFileNames}" Margin="560,282,16,141" SelectionChanged="NamesBox_SelectionChanged"/>
-        <Image x:Name="Circle2" HorizontalAlignment="Left" Height="200" Margin="545,104,0,0" VerticalAlignment="Top" Width="242" Source="https://circle.so/wp-content/uploads/Ellipse-261.png" OpacityMask="Black"/>
+        <Label x:Name="vLabel" Content="v.1.0.0" HorizontalAlignment="Left" Margin="886,537,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Bahnschrift"/>
+        <Button x:Name="MainBackBtn" Visibility="Hidden" Content="Back" HorizontalAlignment="Left" Margin="35,459,0,0" VerticalAlignment="Top" Height="35" Width="66" Background="{x:Null}" Foreground="White" BorderBrush="White" FontFamily="Bahnschrift" Click="MainBackBtn_Click"/>
+        <ListBox x:Name="NamesBox" Visibility="Hidden" ItemsSource="{Binding TxtFileNames}" Margin="560,144,16,216" SelectionChanged="NamesBox_SelectionChanged" Height="311.01"/>
+        <Image x:Name="Circle2" Visibility="Visible" HorizontalAlignment="Left" Height="200" Margin="741,93,0,0" VerticalAlignment="Top" Width="242" Source="https://circle.so/wp-content/uploads/Ellipse-261.png" OpacityMask="Black"/>
         <Image x:Name="Circle1" HorizontalAlignment="Left" Height="280" Margin="-39,122,0,0" VerticalAlignment="Top" Width="326" Source="https://circle.so/wp-content/uploads/Ellipse-261.png" OpacityMask="#FFF9EDED" Opacity="0.4"/>
-        <Image x:Name="Circle3" HorizontalAlignment="Left" Height="58" Margin="461,430,0,0" VerticalAlignment="Top" Width="84" Source="https://circle.so/wp-content/uploads/Ellipse-261.png" OpacityMask="Black"/>
+        <Image x:Name="Circle3" HorizontalAlignment="Left" Height="58" Margin="704,442,0,0" VerticalAlignment="Top" Width="84" Source="https://circle.so/wp-content/uploads/Ellipse-261.png" OpacityMask="Black"/>
     </Grid>
 </Window>
